add cloning bacon feature

--- a/resources/views/bacon.edge
+++ b/resources/views/bacon.edge
@@ -2,7 +2,9 @@
 @set('title', 'Bacon factory')
 
 @section('body')
-  @!component('snowdog/bacon', {
-    img: '/images/bacon.jpg'
-  })
+  <div id="baconPage" class="bacon-page">
+    @!component('snowdog/bacon', {
+      img: '/images/bacon.jpg'
+    })
+  </div>
 @end
