--- a/resources/views/components/welcome.edge
+++ b/resources/views/components/welcome.edge
@@ -1,18 +1,5 @@
-<div>
-  <h1 class="title">
-    Hi there!
-  </h1>
-  <p class="subtitle">
-    Congratulations, you have just started your recruitment test.
-  </p>
-
-  <ul>
-    <li>
-      You can update this page by editing <code>{{ source }}</code> file
-    </li>
-
-    <li>
-      If you run into problems, check the <a href="https://docs.adonisjs.com" target="_blank">AdonisJS documentation</a>.
-    </li>
-  </ul>
+<div style="position: absolute; top: 50%; left: 50%; text-align: center; transform: translate(-50%, -50%);">
+  <p><a href="/">Welcome page</a></p>
+  <p><a href="/bacon">Bacon page</a></p>
+  <p><a href="/checkout">Checkout page</a></p>
 </div>
