add checkout form with js validation, handle ajax call in checkouts controller

--- a/resources/views/components/welcome.edge
+++ b/resources/views/components/welcome.edge
@@ -1,5 +1,4 @@
-<div style="position: absolute; top: 50%; left: 50%; text-align: center; transform: translate(-50%, -50%);">
-  <p><a href="/">Welcome page</a></p>
+<div class="welcome-page">
   <p><a href="/bacon">Bacon page</a></p>
   <p><a href="/checkout">Checkout page</a></p>
 </div>
