--- a/resources/views/bacon.edge
+++ b/resources/views/bacon.edge
@@ -2,7 +2,7 @@
 @set('title', 'Bacon factory')
 
 @section('body')
-  <div id="baconPage" class="bacon-page">
+  <div class="bacon-page">
     @!component('snowdog/bacon', {
       img: '/images/bacon.jpg'
     })
