--- a/resources/scss/pages/bacon.scss
+++ b/resources/scss/pages/bacon.scss
@@ -16,7 +16,7 @@
         border-radius: 20px;
         padding: 9px 18px;
         border: none;
-        background: #5A45FF;
+        background: $color-purple;
         color: white;
         cursor: pointer;
       }
