--- a/resources/views/components/welcome.edge
+++ b/resources/views/components/welcome.edge
@@ -1,4 +1,4 @@
 <div class="welcome-page">
-  <p><a href="/bacon">Bacon page</a></p>
-  <p><a href="/checkout">Checkout page</a></p>
+  <a href="/bacon">Bacon page</a>
+  <a href="/checkout">Checkout page</a>
 </div>
