refactor form scripts

--- a/resources/views/pages/checkout.edge
+++ b/resources/views/pages/checkout.edge
@@ -15,17 +15,8 @@
     @include('partials/summary-section')
 
     {{--  Submit button  --}}
-    <div class="row">
-      <div class="col-xs-12 col-md-8 button-wrapper">
-        <button type="submit" id="completePurchaseButton">
-          @!component('components/icons/shopping-cart', {
-            height: '19px',
-            width: 'auto',
-            color: 'white'
-          })
-          Complete purchase</button>
-      </div>
-    </div>
+    {{--  <div class="row">
+    </div>  --}}
   </div>
 </main>
 @end
