--- a/resources/views/components/form/input-group.edge
+++ b/resources/views/components/form/input-group.edge
@@ -1,14 +1,14 @@
 <div class="input-group col-xs-12 {{ short ? 'col-sm-6 input-group--half' : '' }}">
-  <label class="input-group__label" for="{{ id }}">{{ label }}</label>
+  <label class="input-group__label" for="{{ name }}">{{ label }}</label>
 
   @if(type === 'select')
-    <select name="{{ name }}" class="formElementData input-group__select {{ className }}" id="{{ id }}">
+    <select name="{{ name }}" class="formElementData input-group__select" id="{{ name }}">
       @each((option, index) in options)
         <option value="{{ index }}" selected>{{ option }}</option>
       @end
     </select>
   @else
-    <input type="{{ type }}" name="{{ name }}" class="formElementData input-group__input" id="{{ id }}" placeholder="{{ placeholder }}" maxlength={{ maxlength ? maxlength : "" }}>
+    <input type="{{ type }}" name="{{ name }}" class="formElementData input-group__input" id="{{ name }}" placeholder="{{ placeholder }}" maxlength={{ maxlength ? maxlength : "" }}>
   @endif
   <span class="input-group__message input-group__message--error"></span>
   @if(icon)
