--- a/resources/views/partials/form-section.edge
+++ b/resources/views/partials/form-section.edge
@@ -11,7 +11,6 @@
           label: 'First name',
           type: 'text',
           name: 'first_name',
-          id: 'firstNameInput',
           placeholder: 'Elon'
         })
         @!component('components/form/input-group', {
@@ -19,7 +18,6 @@
           type: 'text',
           label: 'Last name',
           name: 'last_name',
-          id: 'lastNameInput',
           placeholder: 'Musk'
         })
       </div>
@@ -28,7 +26,6 @@
           label: 'Email',
           type: 'email',
           name: 'email',
-          id: 'emailInput',
           placeholder: 'elon@spacex.com'
         })
       </div>
@@ -38,7 +35,6 @@
           label: 'Country',
           type: 'select',
           name: 'country',
-          id: 'countryInput',
           options: [
             'United States'
           ]
@@ -48,9 +44,8 @@
           type: 'text',
           label: 'Postal Code',
           name: 'postal_code',
-          id: 'postalCodeInput',
           placeholder: '10001',
-          maxlength: 5
+          maxlength: '5'
         })
       </div>
       <div class="row">
@@ -58,7 +53,6 @@
           label: 'Phone Number',
           type: 'tel',
           name: 'phone',
-          id: 'phoneInput',
           placeholder: '(212) 692-93-92'
         })
       </div>
@@ -81,9 +75,8 @@
           label: 'Credit Card Number',
           type: 'text',
           name: 'credit_card',
-          id: 'creditCardInput',
           placeholder: '0000 - 0000 - 0000 - 0000',
-          maxlength: 25,
+          maxlength: '25',
           icon: true
         })
           @slot('icon')
@@ -99,9 +92,8 @@
           label: 'Security code',
           type: 'password',
           name: 'security_code',
-          id: 'securityCodeInput',
           placeholder: '***',
-          maxlength: 3
+          maxlength: '3'
         })
           @slot('icon')
             <span class="question-mark">
@@ -114,10 +106,22 @@
           type: 'text',
           label: 'Expiration date',
           name: 'expiration_date',
-          id: 'expirationDateInput',
           placeholder: 'MM / YY',
-          maxlength: 7
+          maxlength: '7'
         })
       </div>
     </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-md-8 button-wrapper">
+        <button type="submit" id="completePurchaseButton">
+          @!component('components/icons/shopping-cart', {
+            height: '19px',
+            width: 'auto',
+            color: 'white'
+          })
+          Complete purchase</button>
+      </div>
+    </div>
+
 </section>
