--- a/resources/scss/pages/checkout.scss
+++ b/resources/scss/pages/checkout.scss
@@ -10,27 +10,31 @@
     justify-content: center;
     align-items: center;
     border-radius: 3px;
-    padding: 6px;
     margin-bottom: 20px;
     border: 2px solid #7b8187;
     background-color: transparent;
     color: #212834;
     text-align: center;
-    font-size: 14px;
     transition: all .5s;
+    position: fixed;
+    z-index: 100;
+    padding: 50px 20px;
+    background-color: #f2f2f2;
+    font-size: 16px;
+    width: 40%;
+    left: 50%;
+    transform: translate(-50%, -100%);
     display: none;
 
     &.message--success {
       display: block;
       border: 2px solid $color-success-light;
-      background-color: $color-success-transparent;
       color: $color-success-light;
     }
 
     &.message--error {
       display: block;
       border: 2px solid $color-error-light;
-      background-color: $color-error-transparent;
       color: $color-error-light;
     }
   }
