--- a/resources/views/partials/form-section.edge
+++ b/resources/views/partials/form-section.edge
@@ -113,7 +113,7 @@
     </div>
 
     <div class="row">
-      <div class="col-xs-12 col-md-8 button-wrapper">
+      <div class="col-xs-12 button-wrapper">
         <button type="submit" id="completePurchaseButton">
           @!component('components/icons/shopping-cart', {
             height: '19px',
