--- a/resources/views/pages/checkout.edge
+++ b/resources/views/pages/checkout.edge
@@ -5,7 +5,7 @@
 <main class="container checkout-page">
   <div class="row">
     {{--  Form section  --}}
-    <form class="col-xs-12 col-md-8 form" action="{{ route('order') }}" method="POST" id="completePurchaseForm">
+    <form class="col-xs-12 col-md-8 form" id="completePurchaseForm">
       {{ csrfField() }}
       <div class="message"></div>
       @include('partials/form-section')
